Fixed my coloring so its across whole screen (looks better now) Changed Columns to 3 on desktop and 1 on mobile so it is cleaner Changed color scheme to Jeff's preference Fixed image issue by making it smaller when on mobile Added bottom where copyright and information are found

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -134,18 +134,20 @@ html, body {
 #services {
   display: flex;
   flex-wrap: wrap;
-  margin: 50px;
   margin-top: 0px;
-  font-weight: 300;
-  color: rgba(0, 0, 0, .5);
-  background-color: lightgray;
+  font-weight: bold;
+  color: rgba(0, 0, 0, .65);
+  background-color:rgb(212,175,55);
   justify-content: center;
   align-items: center;
+
 }
 
 #services-description {
-  padding: 40px;
-  flex: 0 0 2;
+  font-size: 20px;
+  padding: 50px;
+  padding-top: 0px;
+  padding-bottom: 100px;
   text-align: center;
 }
 #services h4 {
@@ -154,29 +156,32 @@ html, body {
 #header {
   display: flex;
   flex-wrap: wrap;
-  margin: 50px;
-  margin-top: 0px;
+  margin-top: 10px;
   margin-bottom: 0px;
+  padding: 30px;
+  padding-left: 10px;
+  padding-top: 50px;
+  padding-bottom: 10px;
   font-weight: 300;
   color: rgba(0, 0, 0, .5);
+  background-color:rgb(212,175,55);
   text-align: center;
-  
 }
+
 #header h1 {
   padding: 20px;
   flex: 2;
   color: rgba(0, 0, 0, 1);
 }
 
-#column {
-  margin-right: 30px;
-}
+
 
 #thick {
-  font-weight: 450;
+  font-weight: 500;
   color: rgba(0, 0, 0, 1);
   margin-bottom: 0px;
 }
+
 #location {
   display: flex;
   flex-wrap: wrap;
@@ -194,8 +199,60 @@ html, body {
 }
 
 #location-gps {
+  margin: 10px; 
   padding: 50px;
   flex: 0 0 2;
+}
+
+#location-gps-mobile {
+  display: flex;
+  flex-wrap: wrap;
+  display: none; 
+  padding: 50px;
+  
+}
+#column {
+  margin: 20px;
+}
+#column-mobile{
+  display: none;
+}
+
+
+
+@media only screen and (max-width: 600px) {
+  #location-gps {
+    display: none;
+  }
+  #location-gps-mobile {
+    display: block;
+  }
+
+  #column {
+    display: none;
+  }
+  #column-mobile{
+    display: block;
+  }
+
+}
+
+#bottom {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 50px;
+  font-weight: 300;
+  color: white;
+  background-color:black;
+  margin: auto;
+  justify-content: center;
+  text-decoration: none;
+}
+#bottomcolumn {
+  text-align: center;
+}
+#copyright {
+  color:rgb(212,175,55);
 }
 
 .gallery{
@@ -206,7 +263,7 @@ html, body {
   padding-right: 23%;
   padding-top: 40px;
   padding-bottom: 100px;
-  background-color: lightgray;
+  background-color:rgb(212,175,55);
 }
 
 .card-img-top{
